[package]
name = "async-session"
version = "3.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/async-session"
documentation = "https://docs.rs/async-session"
description = "Async session support with pluggable stores"
readme = "README.md"
edition = "2021"
keywords = []
categories = []
authors = [
  "Yoshua Wuyts <yoshuawuyts@gmail.com>",
  "Jacob Rothstein <hi@jbr.me>"
]

[dependencies]
async-trait = "0.1.59"
rand = "0.8.5"
base64 = "0.21.1"
sha2 = "0.10.6"
hmac = "0.12.1"
serde_json = "1.0.89"
bincode = "1.3.3"
anyhow = "1.0.66"
blake3 = "1.3.3"
async-lock = "2.6.0"
log = "0.4.17"

[dependencies.serde]
version = "1.0.150"
features = ["rc", "derive"]

[dependencies.time]
version = "0.3.17"
features = ["serde"]

[dev-dependencies.async-std]
version = "1.12.0"
features = ["attributes"]
