[package]
name = "async-session"
version = "3.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/async-session"
documentation = "https://docs.rs/async-session"
description = "Async session support with pluggable stores"
readme = "README.md"
edition = "2021"
keywords = []
categories = []
authors = [
  "Yoshua Wuyts <yoshuawuyts@gmail.com>",
  "Jacob Rothstein <hi@jbr.me>"
]

[dependencies]
async-trait = "0.1.64"
rand = "0.8.5"
base64 = "0.21.0"
serde_json = "1.0.93"
blake3 = "1.3.3"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.time]
version = "0.3.18"
features = ["serde"]

[dev-dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[dev-dependencies]
async-session-memory-store = {path = "../memory-store"}
