[package]
name = "async-session-cookie-store"
version = "0.0.0"
edition = "2021"

[dependencies]
async-session = { path = "../async-session", version = "3.0.0" }
base64 = "0.21.0"
bincode-json = { version = "0.1.5", features = ["json"] }
serde_json = "1.0.95"
thiserror = "1.0.38"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
