[package]
name = "async-session-memory-store"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-session = { path = "../async-session", version = "3.0.0" }
log = "0.4.17"
dashmap = "5.4.0"
thiserror = "1.0.40"
base64 = "0.21.0"
serde_json = "1.0.95"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
